# agent-management-platform

./: .gitignore  AGENT_LEARNING_VERIFICATION.md  ARCHITECTURE_ANALYSIS_REPORT.md  BREAKTHROUGH_FINDINGS.md  COMPLETE_SESSION_REPORT.md  COMPLETE_STATUS_REPORT.md  COUNTER_STYLE_AGENT_LAB_DEPLOYMENT_STATUS.md  COUNTER_STYLE_UI_IMPLEMENTATION.md  CURRENT_STATE_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUCCESS.md  DEPLOYMENT_SUMMARY.md  DEPLOY_GOOGLE_CLOUD.md  DEPLOY_NOW.md  DEPLOY_ONLINE.md  DEPLOY_QUICKSTART.md  DEPLOY_RAILWAY.md  Dockerfile.backend  Dockerfile.frontend  EXTRACTION_AND_DEPLOYMENT_STATUS.md  FINAL_SESSION_SUMMARY.md  FINAL_STATUS.md  FIX_DEPLOYED_SUCCESS.md  FRONTEND_STATUS_REPORT.md  GEMINI_DIAGNOSIS.md  GEMINI_SETUP_GUIDE.md  GEOSPATIAL_AGENT_FEASIBILITY.md  GEOSPATIAL_AGENT_RETRIEVAL_GUIDE.md  GETTING_STARTED.md  HOW_TO_DEPLOY.md  IMPLEMENTATION_SUMMARY.md  INTELLIGENT_AGENT_CREATION_DESIGN.md  INTELLIGENT_AGENT_SETUP_STATUS.md  INTELLIGENT_AGENT_SUCCESS.md  INTELLIGENT_ORCHESTRATOR.md  MCP_AND_DEPLOYMENT_STATUS.md  QUICK_START.md  (+22 more)
mcp-server/: .env.example  QUICKSTART.md  README.md  agent_management.db  install.sh  pyproject.toml  requirements.txt  setup.py  setup.sh  test_server.py
mcp-server/agent-management-platform/backend/: requirements.txt
mcp-server/agent_mcp_server/: __init__.py  cli.py  database.py  models.py  server.py
mcp-server/src/agent_management_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
mcp-server/src/agent_mcp/: __main__.py  config.py  (+4 more)
(+2367 files in other folders)
