[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-management-platform-mcp"
version = "1.0.0"
description = "MCP Server for Agent Management Platform"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.9.0",
    "pydantic>=2.5.0",
    "sqlalchemy>=2.0.23",
    "aiosqlite>=0.19.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
agent-mcp-server = "agent_mcp_server.server:main"
